# yolov5_atWork

./: README.md
custom_msgs/: CMakeLists.txt  package.xml
custom_msgs/msg/: Fourpoints.msg
main_pkg/: CMakeLists.txt  package.xml
main_pkg/launch/: main_cartographerSLAM.launch.py  main_realBot_nav.launch.py  main_slamToolBoxSLAM.launch.py  main_workBot.launch.py
main_pkg/rviz/: main.rviz  main2.rviz  navSlamTB.rviz
main_pkg/src/: testOne_Basic_Manipulation.py
ros2-aruco-pose-estimation/aruco_interfaces/msg/: ArucoMarkers.msg
ros2-aruco-pose-estimation/aruco_pose_estimation/aruco_pose_estimation/: pose_estimation.py  trackbar_color_detection.py
sim_gazebo_classic/: CMakeLists.txt  package.xml
sim_gazebo_classic/launch/: realbot_spawn.launch.py  spawn_robotGZClassic.launch.py
sim_gazebo_classic/models/: t2.dae
sim_gazebo_classic/rviz/: urdf_rviz.rviz
sim_gazebo_classic/urdf/: atWorkBot.urdf.xacro  atWorkRobot.gazebo.xacro  include.xacro
sim_gazebo_classic/worlds/: gazebo_classic.world  jgworld.world  mundo.dae  tb3_dqnSt4.world
tutorial_interfaces/: CMakeLists.txt  package.xml
tutorial_interfaces/msg/: Atworkobjects.msg  Atworkobjectsarray.msg  DetectionArray.msg  Fourpoints.msg
tutorial_interfaces/srv/: Detectionsorganized.srv
vision_atwork/: package.xml  setup.cfg  setup.py
vision_atwork/launch/: vision.launch.py
vision_atwork/vision_atwork/: clean_obstacles_file.py  client_member_function.py  detections_organizer.py
yolo_atwork/: package.xml  setup.cfg  setup.py
yolo_atwork/launch/: big_compVision.launch.py  newBigYOLO.launch.py  obj_yolo.launch.py  obj_yolo_launch.py  ws_yolo.launch.py  ws_yolo_launch.py  yolo_launch.py
yolo_atwork/yolo_atwork/: aruco_utils.py  cont_pos_est.py  container_detection.py  container_pose_est.py  depth_test.py  object_pose_est.py  object_recognition.py  ros_recognition.py  workspace_pose_est.py  workspace_recognition.py
yolo_atwork/yolo_atwork/utils/: general.py  (+2 more)
yolobot_recognition/: CMakeLists.txt  package.xml
yolobot_recognition/scripts/: .gitignore  ros_recognition_yolo.py  workspace_pose_est.py
(+11 files in other folders)
